MODSOURCE-921: MARC holdings record cannot be opened via "quickMARC" after Ownership update